--- a/www/templates/help.html
+++ b/www/templates/help.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar class="bar-calm">
+  <ion-header-bar class="bar-calm background-B4E065">
     <h1 class="title">事件內容</h1>
     <div class="buttons">
       <button class="button button-clear" ng-click="closeHelp()">
