--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,8 +1,8 @@
-<ion-view view-title="HOME">
-  <ion-content class="home">
-    <ion-refresher pulling-text="" on-refresh="doRefresh()"></ion-refresher>
+<ion-view view-title="withU">
+  <ion-content class="home" scroll="false">
+    <!--<ion-refresher pulling-text="" on-refresh="doRefresh()"></ion-refresher>-->
     <div ng-controller="HomeCtrl">
-      <div class="logo">LOGO</div>
+      <h3><div class="logo">WithU</div></h3>
       <div>
         <button class="button button-stable ink-dark home_button" ng-click="helpMe()">HELP ME</button>
         <button class="button button-stable ink-dark home_button" ng-click="centerOnMe()" >HELP OTHERS</button>
