--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-calm">
+    <ion-nav-bar class="bar-calm background-B4E065">
       <ion-nav-back-button>
       </ion-nav-back-button>
 
@@ -17,7 +17,7 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <ion-header-bar class="bar-calm">
+    <ion-header-bar class="bar-calm background-B4E065">
       <h1 class="title">Menu</h1>
     </ion-header-bar>
     <ion-content>
@@ -31,28 +31,28 @@
         </ion-item>
         -->
         <ion-item menu-close href="#/app/addincident" class="item-icon-left">
-          <i class="icon ion-medkit margin-right-10 font-size-22 color-11c1f3"></i>
+          <i class="icon ion-medkit margin-right-10 font-size-22 color-B4E065"></i>
           Addincident
         </ion-item>
         <ion-item menu-close href="#/app/member" class="item-icon-left">
-          <i class="icon ion-clipboard margin-right-10 font-size-22 color-11c1f3"></i>
+          <i class="icon ion-clipboard margin-right-10 font-size-22 color-B4E065"></i>
           Member
         </ion-item>
         <ion-item menu-close href="#/app/incidentHistory" class="item-icon-left">
-          <i class="icon ion-filing margin-right-10 font-size-22 color-11c1f3"></i>
+          <i class="icon ion-filing margin-right-10 font-size-22 color-B4E065"></i>
           Incident History
         </ion-item>
         <ion-item menu-close href="#/app/helpHistory" class="item-icon-left">
-          <i class="icon ion-ios-flag margin-right-10 font-size-22 color-11c1f3"></i>
+          <i class="icon ion-ios-flag margin-right-10 font-size-22 color-B4E065"></i>
           Help History
         </ion-item>
         <ion-item menu-close href="#/app/map" class="item-icon-left">
-          <i class="icon ion-map margin-right-10 font-size-22 color-11c1f3"></i>
+          <i class="icon ion-map margin-right-10 font-size-22 color-B4E065"></i>
           Map
         </ion-item>
-        <button class="button button-clear button-stable" style="margin-top:60px" ngclick="logout()">
+        <!--<button class="button button-clear button-stable" style="margin-top:60px" ngclick="logout()">
           讓我登出拜託
-        </button>
+        </button>-->
       </ion-list>
     </ion-content>
   </ion-side-menu>
