--- a/www/templates/addincident.html
+++ b/www/templates/addincident.html
@@ -28,10 +28,13 @@
 						<input type="text" ng-model="illust" placeholder="請告訴大家能如何幫助你，並說明事件" required>
 					</label>
 					<label class="item item-input">
-						<span class="input-label">期限</span>
+						<span class="input-label">截止日期</span>
 						<div class="width-150" ng-init="date=default_date;">
 							<input type="date" ng-model="date" required>
 						</div>
+					</label>
+					<label class="item item-input">
+						<span class="input-label">截止時間</span>
 						<div class="width-150" ng-init="time=default_date;">
 							<input type="time" ng-model="time" required>
 						</div>
