--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -5,7 +5,7 @@
       <h3><div class="logo">WithU</div></h3>
       <div>
         <button class="button button-stable ink-dark home_button" ng-click="helpMe()">HELP ME</button>
-        <button class="button button-stable ink-dark home_button" ng-click="centerOnMe()" >HELP OTHERS</button>
+        <button class="button button-stable ink-dark home_button" ng-click="helpOthers()" >HELP OTHERS</button>
       </div>
 	  <button class="button button-stable ink-dark home_button" ng-click="callMom()">卡齁阿母</button>
     </div>
