--- a/www/templates/helpHistory.html
+++ b/www/templates/helpHistory.html
@@ -1,27 +1,33 @@
 <ion-view view-title="拯救紀錄">
   <ion-content scroll="true" ng-controller="HelpHistoryCtrl">
-  <ion-refresher on-refresh="doRefresh()" pulling-text="重新整理"></ion-refresher>
-    <div>
-      <div class="width-100per padding-30-0 background-2ADCD9 text-align-center color-FFF">
-        <div class="font-size-18">YOUR POINTS:</div>
-        <div class="margin-top-15 font-size-40">{{ points }}</div>
+    <ion-refresher on-refresh="doRefresh()" pulling-text="重新整理"></ion-refresher>
+    <div class="width-100per padding-30-0 background-2ADCD9 text-align-center color-FFF">
+      <div class="font-size-18">YOUR POINTS:</div>
+      <div class="margin-top-15 font-size-40">{{ points }}</div>
+    </div>
+    <ion-list>
+      <div id="help_history_matching_title" class="item item-divider margin-0 font-size-18 border-top-0" style="display: none">
+        <i class="icon ion-android-contacts margin-right-10 color-11c1f3"></i>等待求助者配對
       </div>
-      <ion-list>
-        <div id="help_history_unsolved_title" class="item item-divider margin-0 font-size-18 border-top-0" style="display: none">
-          <i class="icon ion-help-circled margin-right-10 color-FFDC00"></i>求助者尚未評分
-        </div>
-        <div id="help_history_unsolved" class="list"></div>
-        <div id="help_history_solved_title" class="item item-divider margin-0 font-size-18 border-top-0" style="display: none">
-          <i class="icon ion-checkmark-circled margin-right-10 color-25D665"></i>已完成
-        </div>
-          <div id="help_history_solved" class="list"></div>
-      </ion-list>
-      <div id="none_record" class="margin-top-20 text-align-center color-B0B0B0" style="display: none">
-        <i class="icon ion-sad font-size-60"></i>
-          <div class="margin-top-20 font-size-18">
-            你還沒有幫助過人喔！
-          </div>
-        </div>
+      <div id="help_history_matching" class="list"></div>
+      <div id="help_history_askRating_title" class="item item-divider margin-0 font-size-18 border-top-0" style="display: none">
+        <i class="icon ion-help-circled margin-right-10 color-FFDC00"></i>求助者尚未評分
+      </div>
+      <div id="help_history_askRating" class="list"></div>
+      <div id="help_history_unsolved_title" class="item item-divider margin-0 font-size-18 border-top-0" style="display: none">
+        <i class="icon ion-help-circled margin-right-10 color-FFDC00"></i>解決中
+      </div>
+      <div id="help_history_unsolved" class="list"></div>
+      <div id="help_history_solved_title" class="item item-divider margin-0 font-size-18 border-top-0" style="display: none">
+        <i class="icon ion-checkmark-circled margin-right-10 color-25D665"></i>已完成
+      </div>
+      <div id="help_history_solved" class="list"></div>
+    </ion-list>
+    <div id="none_record" class="margin-top-20 text-align-center color-B0B0B0" style="display: none">
+      <i class="icon ion-sad font-size-60"></i>
+      <div class="margin-top-20 font-size-18">
+        你還沒有幫助過人喔！
+      </div>
     </div>
   </ion-content>
 </ion-view>
