--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -3,6 +3,7 @@
 		<ion-pane>
 			<div ng-controller="MapCtrl">
 				<ion-content ng-init="initialize()">
+					<!-- </div><button class="button button-calm" ng-click="tst()">tst</button> -->
 					<div id="map" data-tap-disabled="true"></div>
 				</ion-content>
 				<button class="button button-fab button-fab-bottom-left ink-dark button-calm icon ion-android-refresh" ng-click="doRefresh()"></button>
