--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -9,7 +9,7 @@
         </button>
       </ion-nav-buttons>
       <ion-nav-buttons side="right">
-        <button ng-controller="NotificateCtrl" class="button button-clear icon ion-ios-sunny-outline" ng-click="notificate()"></button>
+        <button ng-controller="NotificateCtrl" class="button button-clear icon ion-chatbubble-working" ng-click="notificate()"></button>
         <button class="button button-clear icon ion-home" href="#/app/home" ng-click="home()"></button>
       </ion-nav-buttons>
     </ion-nav-bar>
@@ -45,6 +45,10 @@
         <ion-item menu-close href="#/app/helpHistory" class="item-icon-left">
           <i class="icon ion-ios-flag margin-right-10 font-size-22 color-B4E065"></i>
           Help History
+        </ion-item>
+        <ion-item menu-close href="#/app/shop" class="item-icon-left">
+          <i class="icon ion-android-cart margin-right-10 font-size-22 color-B4E065"></i>
+          Shop
         </ion-item>
         <ion-item menu-close href="#/app/map" class="item-icon-left">
           <i class="icon ion-map margin-right-10 font-size-22 color-B4E065"></i>
