--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -2,7 +2,7 @@
   <ion-content class="home" scroll="false">
     <!--<ion-refresher pulling-text="" on-refresh="doRefresh()"></ion-refresher>-->
     <div ng-controller="HomeCtrl">
-      <h3><div class="logo">WithU</div></h3>
+      <div class="logo"><img src="./img/superman8.png"></div>
       <div>
         <button class="button button-stable ink-dark home_button" ng-click="helpMe()">HELP ME</button>
         <button class="button button-stable ink-dark home_button" ng-click="helpOthers()" >HELP OTHERS</button>
