help history tab、事件時間

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -246,6 +246,9 @@ input.ng-dirty.ng-invalid {
 .padding-top-16{
   padding-top: 16px;
 }
+.padding-top-20{
+  padding-top: 20px !important;
+}
 .padding-left-16{
   padding-left: 16px !important;
 }
