--- a/www/templates/shop.html
+++ b/www/templates/shop.html
@@ -1,22 +1,22 @@
 <ion-view view-title="折價券商店" ng-controller="ShopCtrl">
   <ion-content>
-    <div class="font-size-25 padding-10-20 color-f2c34b" ng-show="current_category == 1">
+    <div class="font-size-25 padding-10-20 padding-top-20 color-f2c34b" ng-show="current_category == 1">
       <i class="icon ion-android-restaurant text-align-center"></i>
       飲食
     </div>
-    <div class="font-size-25 padding-10-20 color-f2c34b" ng-show="current_category == 2">
+    <div class="font-size-25 padding-10-20 padding-top-20 color-f2c34b" ng-show="current_category == 2">
       <i class="icon ion-ios-cart text-align-center"></i>
       生活
     </div>
-    <div class="font-size-25 padding-10-20 color-f2c34b" ng-show="current_category == 3">
+    <div class="font-size-25 padding-10-20 padding-top-20 color-f2c34b" ng-show="current_category == 3">
       <i class="icon ion-tshirt text-align-center"></i>
       服飾
     </div>
-    <div class="font-size-25 padding-10-20 color-f2c34b" ng-show="current_category == 4">
+    <div class="font-size-25 padding-10-20 padding-top-20 color-f2c34b" ng-show="current_category == 4">
       <i class="icon ion-android-bus text-align-center"></i>
       交通
     </div>
-    <div class="font-size-25 padding-10-20 color-f2c34b" ng-show="current_category == 5">
+    <div class="font-size-25 padding-10-20 padding-top-20 color-f2c34b" ng-show="current_category == 5">
       <i class="icon ion-android-film text-align-center"></i>
       娛樂
     </div>
