--- a/www/templates/addincident.html
+++ b/www/templates/addincident.html
@@ -29,16 +29,16 @@
 					</label>
 					<label class="item item-input">
 						<span class="input-label">截止日期</span>
-						<div class="width-150" ng-init="date=default_date;">
-							<input type="date" ng-model="date" required>
+						<div class="width-160" ng-init="date=default_date;" formatted-time>
+							<input type="datetime-local" ng-model="date" required formatted-time>
 						</div>
 					</label>
-					<label class="item item-input">
+					<!-- <label class="item item-input">
 						<span class="input-label">截止時間</span>
 						<div class="width-150" ng-init="time=default_date;" formatted-time>
 							<input type="time" ng-model="time" required formatted-time>
 						</div>
-					</label>
+					</label> -->
 					<label class="item item-input item-select">
 						<div class="input-label">所在位置</div>
 							<select ng-model="location" required>
